Cleaned up and fixed the url in the config.yml

--- a/404.md
+++ b/404.md
@@ -5,6 +5,8 @@ description: "Page not found. Your pixels are in another canvas."
 sitemap: false
 ---  
 
+![Android Not Found]({{ site.url }}/images/android-404.png)
+
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
 
 <script type="text/javascript">
