Fixed YouTube video in the post

--- a/_posts/blog/2014-11-11-dwgm.md
+++ b/_posts/blog/2014-11-11-dwgm.md
@@ -17,14 +17,14 @@ I'm currently working on a new mod! It is called *Desno's Weapons and Guns Mod* 
 I made already 4 videos about it, if you want to see them here they are:
 
 ##### Preview - DGWM: weapons in local multiplayer :
-<iframe width="420" height="315" src="http://youtu.be/CEILyMDgaB4" frameborder="0"> </iframe>
+<iframe width="560" height="315" src="http://www.youtube.com/embed/CEILyMDgaB4" frameborder="0"> </iframe>
 
 ##### Preview - DWGM: Desno's Weapons and Guns Mod:
-<iframe width="420" height="315" src="http://youtu.be/_5EmKIRSkJk" frameborder="0"> </iframe>
+<iframe width="560" height="315" src="http://www.youtube.com/embed/_5EmKIRSkJk" frameborder="0"> </iframe>
 
 ##### Preview - DWGM: the new smoke effect and 3 new weapons:
-<iframe width="420" height="315" src="http://youtu.be/7UWmUxKs9qg" frameborder="0"> </iframe>
+<iframe width="560" height="315" src="http://www.youtube.com/embed/7UWmUxKs9qg" frameborder="0"> </iframe>
 
 ##### Preview - DWGM: the minigun:
-<iframe width="420" height="315" src="http://youtu.be/uS1XAlG_AwA" frameborder="0"> </iframe>
+<iframe width="560" height="315" src="http://www.youtube.com/embed/uS1XAlG_AwA" frameborder="0"> </iframe>
 
