Updated with the latest commits of the theme and other changes
Changes: changed the tweet text of posts, added share on posts, added
the desnoguns tag for the dwgm post

DIDN’T update gems as in the commits of the So Simple Theme (commit 11
Nov 2014, commit 22 Dec 2014)

--- a/_posts/blog/2014-11-11-dwgm.md
+++ b/_posts/blog/2014-11-11-dwgm.md
@@ -4,10 +4,11 @@ title: "Working on a new mod: DWGM"
 modified:
 categories: blog
 excerpt:
-tags: [mod, dwgm]
+tags: [mod, dwgm, desnoguns]
 image:
   feature:
 date: 2014-11-10T22:30:55-04:00
+share: true
 ---
 
 Hi everyone!
