typo in Pi post

--- a/_posts/blog/2015-03-14-the-pi-mod.md
+++ b/_posts/blog/2015-03-14-the-pi-mod.md
@@ -75,7 +75,7 @@ Nothing useful. It just display the Pi. ;)
 This work is licensed under the Do What the F*** You Want to Public License.
 See [http://en.wikipedia.org/wiki/WTFPL](http://en.wikipedia.org/wiki/WTFPL) for more details.
 <br><br>
-The decimal.js libary is copyright of MikeMcl and is released under the MIT Expat License, details here: [https://github.com/MikeMcl/decimal.js/blob/master/LICENCE](https://github.com/MikeMcl/decimal.js/blob/master/LICENCE)
+The decimal.js library is copyright of MikeMcl and is released under the MIT Expat License, details here: [https://github.com/MikeMcl/decimal.js/blob/master/LICENCE](https://github.com/MikeMcl/decimal.js/blob/master/LICENCE)
 <br><br>
 All the following trademarks are the properties of their respective owners as listed below.
 Minecraft ®/TM & © 2009-2013 Mojang / Notch
