Another typo in Pi

--- a/_posts/blog/2015-03-14-the-pi-mod.md
+++ b/_posts/blog/2015-03-14-the-pi-mod.md
@@ -25,7 +25,7 @@ It actually supports up to 1e+9 (1'000'000'000) digits, but that would take a lo
 The Pi is calculated with the Bailey–Borwein–Plouffe formula: [http://en.wikipedia.org/wik...Plouffe_formula](http://en.wikipedia.org/wiki/Bailey%E2%80%93Borwein%E2%80%93Plouffe_formula)
 
 So... What this mod does?<br>
-Nothing useful. It just display the Pi. ;)
+Nothing useful. It just displays the Pi. ;)
 
 
 ---
