Update Known bugs and issues sections

--- a/_posts/blog/2015-03-14-the-pi-mod.md
+++ b/_posts/blog/2015-03-14-the-pi-mod.md
@@ -66,8 +66,8 @@ Nothing useful. It just displays the Pi. ;)
 
 ## Known bugs and issues
 
-• No known bugs.<br><br>
-• If you find a bug report it in the [minecraft-forum.net thread][thread].
+• There aren't known bugs.<br><br>
+If you find a bug report it in the [minecraft-forum.net thread][thread].
 
 ---
 
