Remove ads in Page Not Found

--- a/404.md
+++ b/404.md
@@ -3,6 +3,7 @@ layout: page
 title: "Page Not Found"
 description: "Page not found. Your pixels are in another canvas."
 sitemap: false
+noads: true
 ---  
 
 ![Android Not Found]({{ site.url }}/images/android-404.png)
