Add blank excerpt where used

--- a/_posts/blog/2014-11-11-dwgm.md
+++ b/_posts/blog/2014-11-11-dwgm.md
@@ -3,7 +3,7 @@ layout: post
 title: "Working on a new mod: DWGM"
 modified:
 categories: blog
-excerpt:
+excerpt: ""
 tags: [mod, dwgm, desnoguns]
 image:
   feature:
