--- a/404.md
+++ b/404.md
@@ -5,9 +5,13 @@ description: "Page not found. Your pixels are in another canvas."
 sitemap: false
 search_omit: true
 permalink: /404.html
+noads: true
 ---  
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+![Android Not Found]({{ site.url }}/images/android-404.png)
+
+Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.<br>
+If you are trying to find the Easter Egg you made a mistake, it is at [this link]({{ site.url }}/easter-egg/).
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
