Fix displaying excerpt

--- a/_posts/blog/2014-08-08-hello-world 20.51.31.md
+++ b/_posts/blog/2014-08-08-hello-world 20.51.31.md
@@ -3,7 +3,7 @@ layout: post
 title: "Hello World: my first post!"
 modified:
 categories: blog
-excerpt:
+excerpt: ""
 tags: [website]
 image:
   feature:
