Fix tables with the new website version

--- a/_posts/blog/2015-03-14-the-pi-mod.md
+++ b/_posts/blog/2015-03-14-the-pi-mod.md
@@ -48,7 +48,7 @@ Nothing useful. It just displays the Pi. ;)
 | MediaFire:       | [Download](http://www.mediafire.com/download/gm2l4curezvzcmy/PiMod_by_Desno365.js) |
 | MEGA:            | [Download](https://mega.co.nz/#!X5ZW0ZbC!ho4qbgVMb1-UBFJ75bhxVyd7XhEl7GLDZBRZ3zsTxmU) |
 |----
-{: rules="groups"}
+{: .table}
 
 ---
 
