Changed all possible urls to https

--- a/_posts/blog/2015-03-14-the-pi-mod.md
+++ b/_posts/blog/2015-03-14-the-pi-mod.md
@@ -23,7 +23,7 @@ Because today, 14 March 2015, is the Pi Day: 03:14:15 :)
 
 The Pi Mod turn your device into a powerful computer that calculates in real time the Pi with a precision of 1000 digits.<br>
 It actually supports up to 1e+9 (1'000'000'000) digits, but that would take a long, long, long time for every digit to be calculated, so you'll see just 1000 digits.<br>
-The Pi is calculated with the Bailey–Borwein–Plouffe formula: [http://en.wikipedia.org/wik...Plouffe_formula](http://en.wikipedia.org/wiki/Bailey%E2%80%93Borwein%E2%80%93Plouffe_formula)
+The Pi is calculated with the Bailey–Borwein–Plouffe formula: [https://en.wikipedia.org/wik...Plouffe_formula](https://en.wikipedia.org/wiki/Bailey%E2%80%93Borwein%E2%80%93Plouffe_formula)
 
 So... What this mod does?<br>
 Nothing useful. It just displays the Pi. ;)
@@ -45,7 +45,7 @@ Nothing useful. It just displays the Pi. ;)
 
 | Website | Download |
 |:--------|:-------:|
-| MediaFire:       | [Download](http://www.mediafire.com/download/gm2l4curezvzcmy/PiMod_by_Desno365.js) |
+| MediaFire:       | [Download](https://www.mediafire.com/download/gm2l4curezvzcmy/PiMod_by_Desno365.js) |
 | MEGA:            | [Download](https://mega.co.nz/#!X5ZW0ZbC!ho4qbgVMb1-UBFJ75bhxVyd7XhEl7GLDZBRZ3zsTxmU) |
 |----
 {: .table}
@@ -54,13 +54,13 @@ Nothing useful. It just displays the Pi. ;)
 
 ## Screenshots
 
-![Pi 1](http://i.imgur.com/HX34zIk.jpg)
+![Pi 1](https://i.imgur.com/HX34zIk.jpg)
 
-![Pi 2](http://i.imgur.com/sIpI2mT.png)
+![Pi 2](https://i.imgur.com/sIpI2mT.png)
 
-![Pi 3](http://i.imgur.com/U7u9wwj.jpg)
+![Pi 3](https://i.imgur.com/U7u9wwj.jpg)
 
-![Pi 4](http://i.imgur.com/LS7JCGG.jpg)
+![Pi 4](https://i.imgur.com/LS7JCGG.jpg)
 
 ---
 
@@ -74,7 +74,7 @@ If you find a bug report it in the [minecraft-forum.net thread][thread].
 ## Copyrights
 
 This work is licensed under the Do What the F*** You Want to Public License.
-See [http://en.wikipedia.org/wiki/WTFPL](http://en.wikipedia.org/wiki/WTFPL) for more details.
+See [https://en.wikipedia.org/wiki/WTFPL](https://en.wikipedia.org/wiki/WTFPL) for more details.
 <br><br>
 The decimal.js library is copyright of MikeMcl and is released under the MIT Expat License, details here: [https://github.com/MikeMcl/decimal.js/blob/master/LICENCE](https://github.com/MikeMcl/decimal.js/blob/master/LICENCE)
 <br><br>
@@ -83,4 +83,4 @@ Minecraft ®/TM & © 2009-2013 Mojang / Notch
 
 ---
 
-[thread]:    http://www.minecraftforum.net/forums/minecraft-pocket-edition/mcpe-mods-tools/2381101-mod-the-pi-mod-p-published-on-3-14-15-by-desno365
+[thread]:    https://www.minecraftforum.net/forums/minecraft-pocket-edition/mcpe-mods-tools/2381101-mod-the-pi-mod-p-published-on-3-14-15-by-desno365
